--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <br>
 <br>
 
-Note length: <input id=Ir value=0.3 size=4>
+Note length: <input id=len value=0.3 size=4>
 <br>
 <br>
 <button id=p>PLAY</button>
@@ -29,7 +29,7 @@ Player's source code:
 <br>
 <textarea cols=80 rows=16>P = D => {
   if(!D)return;           // D = melody string (a-z + 0 for silence)
-  I=+Ir.value;            // I = note length in seconds
+  I=+len.value;           // I = note length in seconds
   with(new AudioContext)
   with(G=createGain())
   for(i=0;i<D.length;i++)
@@ -48,7 +48,7 @@ Player's source code:
 <script>
 P = D => {
   if(D){         // D = melody string (a-z + 0 for silence)
-    I=+Ir.value; // I = note length in seconds
+    I=+len.value; // I = note length in seconds
     with(new AudioContext)
     with(G=createGain())
     for(i=0;i<D.length;i++)
