--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ Note length: <input id=len value=0.3 size=4>
 <br>
 <hr>
 <br>
-Player's source code:
+<details>
+<summary>Player's source code:</summary>
 <br>
 <br>
 <textarea cols=80 rows=16>P = D => {
@@ -39,14 +40,15 @@ Player's source code:
   G.connect(destination),
   start(i*I+.3),
   frequency.setValueAtTime(440*1.06**(-105+D.charCodeAt(i)),i*I+.3),
-  type='wave',
+  type='sine',            // or triangle or square or sawtooth
   gain.setValueAtTime(.5,i*I+.3),
   gain.setTargetAtTime(.001,i*I+.3+.1,.05),
   stop(i*I+.3+I-.01);
 }</textarea>
+</details>
 
 <script>
-P = D => {
+P = (D,delay) => {
   if(D){         // D = melody string (a-z + 0 for silence)
     I=+len.value; // I = note length in seconds
     with(new AudioContext)
@@ -56,22 +58,22 @@ P = D => {
     if(D[i=+i]&&D[i]!="0")
     connect(G),
     G.connect(destination),
-    start(i*I+.3),
-    frequency.setValueAtTime(440*1.06**(-105+D.charCodeAt(i)),i*I+.3),
-    type='wave',
-    gain.setValueAtTime(.5,i*I+.3),
-    gain.setTargetAtTime(.001,i*I+.3+.1,.05),
-    stop(i*I+.3+I-.01);
+    start(i*I+delay),
+    frequency.setValueAtTime(440*1.06**(-105+D.charCodeAt(i)),i*I+delay),
+    type='sine',
+    gain.setValueAtTime(.5,i*I+delay),
+    gain.setTargetAtTime(.001,i*I+delay+.1,.05),
+    stop(i*I+delay+I-.01);
   }
 }
 
 p.onclick = () => {
-  P(i1.value);
-  P(i2.value);
+  P(i1.value,.3);
+  P(i2.value,.3);
 }
 
 i1.oninput = i2.oninput = e => {
-  P(e.data);
+  P(e.data,0);
 }
 </script>
 <style>
